--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -1,1 +1,10 @@
+{% load static %}
+<div class="pagina-inicial">
 
+    <main class="principal">
+        <section class="menu-lateral">
+            <nav class="menu-lateral__navegacao">
+                <a href="{% url 'login' %}"><img src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"> Login</a>
+                <a href="{% url 'register' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Cadastro</a>
+            </nav>
+        </section>
